# AOC2021

./: CMakeLists.txt  README.md  run.sh
src/: CMakeLists.txt  main.cpp
src/day1/: CMakeLists.txt  day1.cpp  day1.h
src/day2/: CMakeLists.txt  day2.cpp  day2.h
src/day3/: CMakeLists.txt  day3.cpp  day3.h
src/utils/: CMakeLists.txt  convertDecimal.cpp  convertDecimal.h  splitString.cpp  splitString.h  utils.cpp  utils.h
